# AaltoASR

./: .cproject  .cvsignore  .gitignore  .project  AudioPlayer.cc  AudioPlayer.hh  AudioReader.cc  AudioReader.hh  BUGS  CMakeLists.txt  ChangeLog  ConfigParser.cc  ConfigParser.hh  Distributions.cc  Distributions.hh  Doxyfile  FeatureBuffer.cc  FeatureBuffer.hh  FeatureGenerator.cc  FeatureGenerator.hh  FeatureModules.cc  FeatureModules.hh  HmmNetBaumWelch.cc  HmmNetBaumWelch.hh  HmmSet.cc  HmmSet.hh  HmmTrainer.cc  HmmTrainer.hh  INSTALL  INSTALLATION.md  LICENSE  Lattice.cc  Latticer.cc  Latticer.hh  LinearAlgebra.cc  LinearAlgebra.hh  LmbfgsOptimize.cc  LmbfgsOptimize.hh  MPEEvaluator.cc  MPEEvaluator.hh  (+101 more)
aku/: .cvsignore  .gitignore  .project  AudioFileModule.hh  AudioReader.cc  AudioReader.hh  BaseFeaModule.hh  CMakeLists.txt  Distributions.cc  Distributions.hh  FFTModule.hh  FeatureGenerator.cc  FeatureGenerator.hh  FeatureModule.hh  FeatureModules.cc  FeatureModules.hh  HmmNetBaumWelch.cc  HmmNetBaumWelch.hh  HmmSet.cc  HmmSet.hh  Lattice.cc  Lattice.hh  LinearAlgebra.cc  ModuleConfig.cc  ModuleConfig.hh  PhonePool.hh  PhoneProbsToolbox.cc  PhoneProbsToolbox.hh  README  Recipe.cc  Recipe.hh  RegClassTree.hh  SegErrorEvaluator.cc  SegErrorEvaluator.hh  Segmentator.hh  SpeakerConfig.cc  Subspaces.cc  Viterbi.hh  align.cc  clskld.cc  (+24 more)
aku/scripts/: ClusterManager.pm  Hmm.pm  align.pl  build_helper_fsts.sh  copy_recipe_files.pl  create_hmmnets.pl  estonian_rules.txt  fill_silence_out_labels.pl  finnish_rules.txt  fsm2htk.pl  generate_den_hmmnets.pl  hmms2fsm.pl  lex2fst.pl  make_recipe_paths.pl  make_snseg_files.pl  negate_fst_weights.pl  phn2fst.pl  phn2transcript.pl  train.pl  train_ebw.pl  train_ebw_control_opt.pl  train_phn.pl  transcript2char_fst.pl  triphonize_monophone_phns.pl  uk_english_rules.txt  vtln_default.spkc
aku/swig/: .gitignore  CMakeLists.txt  PPToolbox.i  add_undefs.py
aku/tests/: Makefile  mfcc_cms_norm.script  mfcc_p_dd.feaconf  mfcc_p_dd.ref  mfcc_p_dd.script  pre_test.ref  pre_test.script  random_feature_test.cc  run_tests.sh
cmake/: cross-mingw-i686.cmake  cross-mingw-x86_64.cmake
decoder/: .cproject  .project  CMakeLists.txt  ChangeLog  debug_lexprefixtree.py  decode-stream.cc  lna_rec.pl  rec_eng_recipe.py  rec_file.py  rec_hammaspuhe.py  rec_recipe.py  rec_recipe2.py
decoder/src/: .gitignore  Acoustics.hh  ArpaReader.cc  ArpaReader.hh  CMakeLists.txt  Expander.cc  Expander.hh  Fst.cc  Fst.hh  FstAcoustics.cc  FstAcoustics.hh  FstConfidence.cc  FstConfidence.hh  FstSearch.cc  FstSearch.hh  FstSearch_tmpl.hh  FstWithPhoneLoop.cc  FstWithPhoneLoop.hh  GramSorter.cc  HTKLatticeGrammar.cc  HTKLatticeGrammar.hh  HashCache.hh  Hmm.cc  Hmm.hh  InterTreeGram.cc  IteratorRange.hh  LMHistory.hh  Lexicon.cc  Makefile.debug  Makefile.profiling  NowayHmmReader.hh  NowayLexiconReader.hh  OpenFstSearch.cc  OpenFstSearch.hh  Search.hh  SimpleHashCache.hh  SphinxLexiconReader.cc  StateProbReader.cc  TPLexPrefixTree.cc  TPLexPrefixTree.hh  (+26 more)
decoder/src/doc/: tree_gram.fig
decoder/src/fsalm/: .cvsignore  ArpaReader.cc  ArpaReader.hh  CMakeLists.txt  FixedArray.hh  LM.cc  LM.hh  algo.hh  fsalm-convert.cc
decoder/src/misc/: CMakeLists.txt  Endian.hh  Trie.hh  conf.hh  io.cc  io.hh  macros.hh  str.hh  tools.hh  util.hh
decoder/src/morpheus/: CMakeLists.txt  Makefile  Morpheus.hh  README  morpheus.cc
decoder/src/swig/: .gitignore  CMakeLists.txt  Decoder.i  FstDecoder.i  FstSearch.i  OpenFstDecoder.i
decoder/src/tests/: lnareader.cc  test_arpa2.cc
doc/: cmllr_adaptation.txt  feature_configuration.txt  fileformats.html
pyrectool/: .pydevproject  README  default_mllr.spkc  default_vtln+mllr.spkc  default_vtln.spkc  exec-line.sh  human-readable.awk  recognize-batch.sh  recognize-files.sh  recognize-parallel.py  recognize-stateseg.py  recognize.py  rectool.py  submit-to-condor.sh  submit-to-slurm.sh
scripts/: .cvsignore  CondorManager.pm  Fsm.pm  GridManager.pm  Hmm.pm  build_helper_fsts.sh  create_hmmnets.pl  den_hmmnet_batch_sub.pl  english_rules.txt  fill_word_out_labels.pl  fin_voc.lex  finalize_hmmnet.pl  fix_word_boundaries.pl  generate_alt_num_hmmnets.pl  generate_den_hmmnets.pl  hmms2fsm.pl  hmms2trinet.pl  htk2fst.pl  lex2fst.pl  make_den_fst.pl  make_hmmnets.pl  make_recipe_paths.pl  mpe_optimize.pl  phn2transcript.pl  rmb.pl  set_recipe_out_paths.pl  train.pl  train_ebw.pl  transcript2fsm.pl  transcript2fst.pl  transcript2triphn.pl  update_cfg.pl
src/: .cvsignore  Acoustics.hh  ArpaNgramReader.cc  ArpaNgramReader.hh  BinNgramReader.cc  BinNgramReader.hh  ClusterMap.hh  ClusterMap_tmpl.hh  Doxyfile  Endian.hh  Expander.cc  Expander.hh  GramSorter.cc  GramSorter.hh  HashCache.hh  Hmm.cc  Hmm.hh  InterTreeGram.cc  InterTreeGram.hh  LMHistory.cc  LMHistory.hh  Lexicon.cc  Lexicon.hh  LnaReader.cc  LnaReader.hh  LnaReaderCircular.cc  LnaReaderCircular.hh  Makefile  Makefile.am  Makefile.common  NGram.hh  Ngram.cc  Ngram.hh  NowayHmmReader.cc  NowayHmmReader.hh  NowayLexiconReader.cc  NowayLexiconReader.hh  OneFrameAcoustics.cc  OneFrameAcoustics.hh  RawLikelihoodReader.cc  (+49 more)
src/doc/: TreeGram.html  word-graphs
src/fsalm/: ArpaReader.cc  ArpaReader.hh  LM.cc  LM.hh  Makefile  Perplexity.hh  lm.cc
src/misc/: Makefile  SymbolMap.hh  Timer.hh  Trie.hh  conf.cc  conf.hh  ref.hh  str.hh  tools.cc  types.hh
src/morpheus/: Morpheus.hh  Search.hh  morpheus.cc  test.in  test.lm  test.sents
src/swig/: .cvsignore  Decoder.i  Makefile  Makefile.am  path.py
src/tests/: Makefile.am  compare.pl  endian_test.cc  lnareader.cc  test_arpa.cc  test_arpa2.cc  test_iterator.cc  test_tree.cc
tests/: Makefile  mfcc_cms_norm.feaconf  mfcc_cms_norm.ref  mfcc_cms_norm.script  mfcc_p_dd.feaconf  mfcc_p_dd.ref  mfcc_p_dd.script  pre.feaconf  pre_test.ref  random_feature_test.cc  random_feature_test.ref  (+1 more)
tools/: .gitignore  (+1 more)
tools/lattice_rescore/: CMakeLists.txt  Endian.cc  Lattice.hh  Rescore.cc  Rescore.hh  TreeGramArpaReader.hh  conf.cc  str.cc
tools/playseg/: AudioPlayer.cc  AudioPlayer.hh  CMakeLists.txt  Makefile  conf.cc  io.hh  playseg.cc  str.cc  str.hh
(+14 files in other folders)
