dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(decoder, 0.0.1)
AM_CONFIG_HEADER(config.h)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

test "x$CFLAGS" = x && CFLAGS="-g -Wall"
test "x$CXXFLAGS" = x && CXXFLAGS="-g -Wall -Wno-sign-compare"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_PYTHON_INCLUDE_PATH
AC_PROG_PYTHON

AC_OUTPUT(\
	Makefile \
	src/Makefile \
	src/swig/Makefile \
	src/tests/Makefile \
)