noinst_PROGRAMS = test_tree test_iterator lnareader test_arpa test_arpa2 endian_test

test_tree_SOURCES = test_tree.cc
test_tree_LDADD = ../libdecoder.a

test_iterator_SOURCES = test_iterator.cc
test_iterator_LDADD = ../libdecoder.a

lnareader_SOURCES = lnareader.cc
lnareader_LDADD = ../libdecoder.a

test_arpa_SOURCES = test_arpa.cc
test_arpa_LDADD = ../libdecoder.a

test_arpa2_SOURCES = test_arpa2.cc
test_arpa2_LDADD = ../libdecoder.a

endian_test_SOURCES = endian_test.cc
endian_test_LDADD = ../libdecoder.a

INCLUDES = -I../
